# logician

./: .coverage  .env.example  ARCHITECTURE.md  CHANGELOG.md  README.md  demo.py  main.py  pyproject.toml  requirements.txt  setup.cfg
logician/: __init__.py  cli.py  embedder.py  qdrant_wrapper.py  rag.py  utils.py
tests/: test_cli.py  test_embedder.py  test_imports.py  test_qdrant_wrapper.py  test_rag.py  test_rag_smoke.py  test_utils.py
