[tool.poetry]
name = "logician"
version = "0.1.0"
description = "Autonomous DevOps Assistant MVP (RAG + Qdrant)"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
python-dotenv = "^1.0"
qdrant-client = "^1.9"
numpy = "^1.27"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
